force-app/main/default/objects/Case/fields/Contact_to_be_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Contact_to_be_Reviewed__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to show the contact that incorrect data is associated with</description>
    <inlineHelpText>This is the contact related to data integrity issues.</inlineHelpText>
    <label>Contact to be Reviewed</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>