force-app/main/default/objects/Case/fields/Field_s_to_be_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Field_s_to_be_Reviewed__c</fullName>
    <inlineHelpText>This is the field related to the data integrity issue.</inlineHelpText>
    <label>Field(s) to be Reviewed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>