force-app/main/default/objects/Case/fields/Object_to_be_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Object_to_be_Reviewed__c</fullName>
    <inlineHelpText>Select object that pertains to the data integrity issue.</inlineHelpText>
    <label>Object to be Reviewed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Affiliation</fullName>
            </value>
            <value>
                <fullName>Course</fullName>
            </value>
            <value>
                <fullName>Course Offering</fullName>
            </value>
            <value>
                <fullName>Course Connection</fullName>
            </value>
            <value>
                <fullName>Degree</fullName>
            </value>
            <value>
                <fullName>Program Enrollment</fullName>
            </value>
            <value>
                <fullName>Student Outcomes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>