force-app/main/default/objects/Case/fields/Requested_New_Account_City__c.field-meta.xml
<CustomField>
    <fullName>Requested_New_Account_City__c</fullName>
    <label>Requested New Account City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>