force-app/main/default/objects/Case/fields/Requested_New_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Requested_New_Account_Name__c</fullName>
    <inlineHelpText>What is the name of the account (i.e. business name, institution name, etc) you would like to add?</inlineHelpText>
    <label>Requested New Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>