force-app/main/default/objects/Case/fields/Requested_New_Account_State_Country__c.field-meta.xml
<CustomField>
    <fullName>Requested_New_Account_State_Country__c</fullName>
    <label>Requested New Account State/Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>