force-app/main/default/objects/Case/recordTypes/Data_Integrity_Case.recordType-meta.xml
<RecordType>
    <fullName>Data_Integrity_Case</fullName>
    <active>true</active>
    <businessProcess>Data Integrity Issues</businessProcess>
    <description>Used to report issues with data integrity</description>
    <label>Data Integrity Case</label>
</RecordType>