force-app/main/default/objects/Case/recordTypes/New_Account_Request.recordType-meta.xml
<RecordType>
    <fullName>New_Account_Request</fullName>
    <active>true</active>
    <businessProcess>New Account Request</businessProcess>
    <description>Create new business account</description>
    <label>New  Account Request</label>
</RecordType>